# http/role.go
@@ -2,6 +2,9 @@ package http
 
 import (
 	"context"
+	"encoding/json"
+	"fmt"
+	"io/ioutil"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -11,6 +14,7 @@ import (
 	apipb "github.com/nooocode/usercenter/api"
 	ucmodel "github.com/nooocode/usercenter/model"
 	"github.com/nooocode/usercenter/utils/middleware"
+	"gorm.io/gorm"
 )
 
 // AddRole
@@ -165,7 +169,7 @@ func QueryRole(c *gin.Context) {
 		c.JSON(http.StatusOK, resp)
 		return
 	}
-	ucmodel.QueryRole(req, resp)
+	ucmodel.QueryRole(req, resp, false)
 
 	c.JSON(http.StatusOK, resp)
 }
@@ -241,4 +245,119 @@ func GetAllRole(c *gin.Context) {
 	resp.Records = int64(len(roles))
 	resp.Pages = 1
 	c.JSON(http.StatusOK, resp)
+}
+
+// ExportRole godoc
+// @Summary 导出
+// @Description 导出
+// @Tags 角色管理
+// @Accept  json
+// @Produce  octet-stream
+// @Param authorization header string true "jwt token"
+// @Param pageIndex query int false "从1开始"
+// @Param pageSize query int false "默认每页10条"
+// @Param orderField query string false "排序字段"
+// @Param desc query bool false "是否倒序排序"
+// @Param ids query []string false "IDs"
+// @Success 200 {object} apipb.CommonResponse
+// @Router /api/core/auth/role/export [get]
+func ExportRole(c *gin.Context) {
+	req := &apipb.QueryRoleRequest{}
+	resp := &apipb.QueryRoleResponse{
+		Code: apipb.Code_Success,
+	}
+	err := c.BindQuery(req)
+	if err != nil {
+		resp.Code = apipb.Code_BadRequest
+		resp.Message = err.Error()
+		c.JSON(http.StatusOK, resp)
+		return
+	}
+	req.PageIndex = 1
+	req.PageSize = 1000
+	ucmodel.QueryRole(req, resp, true)
+	if resp.Code != apipb.Code_Success {
+		c.JSON(http.StatusOK, resp)
+		return
+	}
+	c.Header("Content-Type", "application/octet-stream")
+
+	c.Header("Content-Disposition", "attachment;filename=Role.json")
+	c.Header("Content-Transfer-Encoding", "binary")
+	buf, _ := json.Marshal(resp.Data)
+	c.Writer.Write(buf)
+}
+
+// ImportRole
+// @Summary 导入
+// @Description 导入
+// @Tags 角色管理
+// @Accept  mpfd
+// @Produce  json
+// @Param authorization header string true "Bearer+空格+Token"
+// @Param files formData file true "要上传的文件"
+// @Success 200 {object} apipb.CommonResponse
+// @Router /api/core/auth/role/import [post]
+func ImportRole(c *gin.Context) {
+	resp := &apipb.QueryRoleResponse{
+		Code: apipb.Code_Success,
+	}
+	//从角色中读取文件
+	file, fileHeader, err := c.Request.FormFile("files")
+	if err != nil {
+		fmt.Println(err)
+		resp.Code = model.BadRequest
+		resp.Message = err.Error()
+		c.JSON(http.StatusBadRequest, resp)
+		return
+	}
+	//defer 结束时关闭文件
+	defer file.Close()
+	fmt.Println("filename: " + fileHeader.Filename)
+	buf, err := ioutil.ReadAll(file)
+	if err != nil {
+		fmt.Println(err)
+		resp.Code = apipb.Code_BadRequest
+		resp.Message = err.Error()
+		c.JSON(http.StatusBadRequest, resp)
+		return
+	}
+
+	var list []*apipb.RoleInfo
+	err = json.Unmarshal(buf, &list)
+	if err != nil {
+		fmt.Println(err)
+		resp.Code = apipb.Code_BadRequest
+		resp.Message = err.Error()
+		c.JSON(http.StatusBadRequest, resp)
+		return
+	}
+	successCount := 0
+	failCount := 0
+	for _, f := range list {
+		err = ucmodel.UpdateRole(ucmodel.PBToRole(f))
+		if err == gorm.ErrRecordNotFound {
+			err = ucmodel.CreateRole(ucmodel.PBToRole(f))
+		}
+		if err != nil {
+			failCount++
+			fmt.Println(err)
+		} else {
+			successCount++
+		}
+	}
+	resp.Message = fmt.Sprintf("导入成功数量:%d,导入失败数量:%d", successCount, failCount)
+	c.JSON(http.StatusOK, resp)
+}
+
+func RegisterRoleRouter(r *gin.Engine) {
+	roleGroup := r.Group("/api/core/auth/role")
+	roleGroup.POST("add", AddRole)
+	roleGroup.PUT("update", UpdateRole)
+	roleGroup.GET("query", QueryRole)
+	roleGroup.DELETE("delete", DeleteRole)
+	roleGroup.GET("all", GetAllRole)
+	roleGroup.GET("detail", GetRoleDetail)
+	roleGroup.GET("export", ExportMenu)
+	roleGroup.POST("import", ImportMenu)
 }
