# http/user.go
@@ -2,6 +2,9 @@ package http
 
 import (
 	"context"
+	"encoding/json"
+	"fmt"
+	"io/ioutil"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -11,6 +14,7 @@ import (
 	apipb "github.com/nooocode/usercenter/api"
 	ucmodel "github.com/nooocode/usercenter/model"
 	"github.com/nooocode/usercenter/utils/middleware"
+	"gorm.io/gorm"
 )
 
 // Login
@@ -305,7 +309,7 @@ func QueryUser(c *gin.Context) {
 	if tenantID != constants.PlatformTenantID {
 		req.TenantID = tenantID
 	}
-	ucmodel.QueryUser(req, resp)
+	ucmodel.QueryUser(req, resp, false)
 
 	c.JSON(http.StatusOK, resp)
 }
@@ -470,4 +474,128 @@ func Logout(c *gin.Context) {
 		resp.Message = err.Error()
 	}
 	c.JSON(http.StatusOK, resp)
+}
+
+// ExportUser godoc
+// @Summary 导出
+// @Description 导出
+// @Tags 用户管理
+// @Accept  json
+// @Produce  octet-stream
+// @Param authorization header string true "jwt token"
+// @Param pageIndex query int false "从1开始"
+// @Param pageSize query int false "默认每页10条"
+// @Param orderField query string false "排序字段"
+// @Param desc query bool false "是否倒序排序"
+// @Param nickname query string false "Nickname"
+// @Param userName query string false "UserName"
+// @Param ids query []string false "IDs"
+// @Success 200 {object} apipb.CommonResponse
+// @Router /api/auth/user/export [get]
+func ExportUser(c *gin.Context) {
+	req := &apipb.QueryUserRequest{}
+	resp := &apipb.QueryUserResponse{
+		Code: apipb.Code_Success,
+	}
+	err := c.BindQuery(req)
+	if err != nil {
+		resp.Code = apipb.Code_BadRequest
+		resp.Message = err.Error()
+		c.JSON(http.StatusOK, resp)
+		return
+	}
+	req.PageIndex = 1
+	req.PageSize = 1000
+	ucmodel.QueryUser(req, resp, true)
+	if resp.Code != apipb.Code_Success {
+		c.JSON(http.StatusOK, resp)
+		return
+	}
+	c.Header("Content-Type", "application/octet-stream")
+
+	c.Header("Content-Disposition", "attachment;filename=User.json")
+	c.Header("Content-Transfer-Encoding", "binary")
+	buf, _ := json.Marshal(resp.Data)
+	c.Writer.Write(buf)
+}
+
+// ImportUser
+// @Summary 导入
+// @Description 导入
+// @Tags 用户管理
+// @Accept  mpfd
+// @Produce  json
+// @Param authorization header string true "Bearer+空格+Token"
+// @Param files formData file true "要上传的文件"
+// @Success 200 {object} apipb.CommonResponse
+// @Router /api/auth/user/import [post]
+func ImportUser(c *gin.Context) {
+	resp := &apipb.QueryUserResponse{
+		Code: apipb.Code_Success,
+	}
+	//从用户中读取文件
+	file, fileHeader, err := c.Request.FormFile("files")
+	if err != nil {
+		fmt.Println(err)
+		resp.Code = model.BadRequest
+		resp.Message = err.Error()
+		c.JSON(http.StatusBadRequest, resp)
+		return
+	}
+	//defer 结束时关闭文件
+	defer file.Close()
+	fmt.Println("filename: " + fileHeader.Filename)
+	buf, err := ioutil.ReadAll(file)
+	if err != nil {
+		fmt.Println(err)
+		resp.Code = apipb.Code_BadRequest
+		resp.Message = err.Error()
+		c.JSON(http.StatusBadRequest, resp)
+		return
+	}
+
+	var list []*apipb.UserInfo
+	err = json.Unmarshal(buf, &list)
+	if err != nil {
+		fmt.Println(err)
+		resp.Code = apipb.Code_BadRequest
+		resp.Message = err.Error()
+		c.JSON(http.StatusBadRequest, resp)
+		return
+	}
+	successCount := 0
+	failCount := 0
+	for _, f := range list {
+		err = ucmodel.UpdateUser(ucmodel.PBToUser(f))
+		if err == gorm.ErrRecordNotFound {
+			err = ucmodel.CreateUser(ucmodel.PBToUser(f), false)
+		}
+		if err != nil {
+			failCount++
+			fmt.Println(err)
+		} else {
+			successCount++
+		}
+	}
+	resp.Message = fmt.Sprintf("导入成功数量:%d,导入失败数量:%d", successCount, failCount)
+	c.JSON(http.StatusOK, resp)
+}
+
+func RegisterUserRouter(r *gin.Engine) {
+	userGroup := r.Group("/api/core/auth/user")
+	userGroup.POST("login", Login)
+	userGroup.POST("logout", Logout)
+	userGroup.GET("profile", Profile)
+	userGroup.PUT("profile", UpdateProfile)
+	userGroup.POST("add", AddUser)
+	userGroup.PUT("update", UpdateUser)
+	userGroup.GET("query", QueryUser)
+	userGroup.DELETE("delete", DeleteUser)
+	userGroup.POST("enable", EnableUser)
+	userGroup.GET("all", GetAllUsers)
+	userGroup.GET("detail", GetUserDetail)
+	userGroup.POST("resetpwd", ResetPwd)
+	userGroup.POST("changepwd", ChangePwd)
+	userGroup.GET("export", ExportUser)
+	userGroup.POST("import", ImportUser)
 }
